# backend/src/Api/Controllers/VariablesController.cs
@@ -1,0 +1,57 @@
+﻿using KwikDeploy.Application.Common.Models;
+using KwikDeploy.Application.Variables.Commands;
+using KwikDeploy.Application.Variables.Queries;
+using Microsoft.AspNetCore.Mvc;
+
+namespace KwikDeploy.Api.Controllers;
+
+[Route("Variables/{ProjectId}")]
+public class VariablesController : ApiControllerBase
+{
+    [HttpGet]
+    [ProducesResponseType(StatusCodes.Status200OK)]
+    [ProducesResponseType(StatusCodes.Status400BadRequest)]
+    public async Task<ActionResult<PaginatedList<VariableHeadDto>>> GetList(VariableGetList query, CancellationToken cancellationToken)
+    {
+        return await Mediator.Send(query, cancellationToken);
+    }
+
+    [HttpGet("{Id}")]
+    public async Task<ActionResult<VariableDto>> GetById(VariableGet query, CancellationToken cancellationToken)
+    {
+        return await Mediator.Send(query, cancellationToken);
+    }
+
+    [HttpGet("uniqueName")]
+    public async Task<ActionResult<Result<bool>>> IsUniqueName(VariableUniqueName query, CancellationToken cancellationToken)
+    {
+        return await Mediator.Send(query, cancellationToken);
+    }
+
+    [HttpPost]
+    [ProducesResponseType(StatusCodes.Status201Created)]
+    public async Task<ActionResult<Result<int>>> Create(VariableCreate command, CancellationToken cancellationToken)
+    {
+        return await Mediator.Send(command, cancellationToken);
+    }
+
+    [HttpPut("{Id}")]
+    [ProducesResponseType(StatusCodes.Status204NoContent)]
+    [ProducesDefaultResponseType]
+    public async Task<ActionResult> Update(VariableUpdate command, CancellationToken cancellationToken)
+    {
+        await Mediator.Send(command, cancellationToken);
+
+        return NoContent();
+    }
+
+    [HttpDelete("{Id}")]
+    [ProducesResponseType(StatusCodes.Status204NoContent)]
+    [ProducesDefaultResponseType]
+    public async Task<ActionResult> Delete(VariableDelete command, CancellationToken cancellationToken)
+    {
+        await Mediator.Send(command, cancellationToken);
+
+        return NoContent();
+    }
+}
