# backend/src/Application/Variables/Commands/VariableCreateValidator.cs
@@ -1,0 +1,15 @@
+﻿using FluentValidation;
+using KwikDeploy.Application.Pipelines.Commands;
+
+namespace KwikDeploy.Application.Variables.Commands;
+
+public class VariableCreateValidator : AbstractValidator<PipelineCreate>
+{
+    public VariableCreateValidator()
+    {
+        RuleFor(v => v.Body.Name)
+            .MaximumLength(100)
+            .NotEmpty();
+    }
+}
+
